# advent_2020

./: Cargo.toml
benches/: day1_bench.rs  day2_bench.rs  day3_bench.rs
src/: day1.rs  day2.rs  day3.rs  lib.rs  util.rs
