[package]
name = "advent_2020"
version = "0.1.0"
authors = ["Reilly Bonham <rrbonham96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day1_bench"
harness = false

[[bench]]
name = "day2_bench"
harness = false

[[bench]]
name = "day3_bench"
harness = false